--- a/FUExaminationSystem/templates/base_generic.html
+++ b/FUExaminationSystem/templates/base_generic.html
@@ -65,6 +65,19 @@
         }
 
         .card {
+         
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 20px;
+            border: 1px solid var(--border-color);
+        }
+
+
+        .cards {
+            justify-content: center;
+            align-items: center;
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -88,6 +101,11 @@
             margin-bottom: 10rem;
         }
         
+        .profile-img {
+            width: 23.375rem;
+            height: 23.375rem;
+            object-fit: cover; /* Resmin doğru şekilde kesilmesini sağlar */
+        }
 
         .form-label {
             font-weight: bold;
@@ -107,7 +125,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">FU Examination System</a>
+                <a class="navbar-brand" href="{% url 'exam_list' %}">FU Examination System</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -120,7 +138,7 @@
                             <a class="nav-link" href="{% url 'exam_list' %}">Exams</a>
                         </li>
                         
-                            {% if user.is_admin %}
+                            {% if user.is_admin or user.is_instructor %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'create_exam' %}">Create Exam</a>
                                 </li>
@@ -137,7 +155,13 @@
             </div>
         </nav>
     </header>
-
+    {% if messages %}
+  <div class="messages">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+  </div>
+{% endif %}
     <main class="containerMain">
         {% block content %}
         {% endblock %}
