--- a/FUExaminationSystem/templates/exams/take_exam.html
+++ b/FUExaminationSystem/templates/exams/take_exam.html
@@ -1,30 +1,54 @@
 {% extends 'base_generic.html' %}
+{% load widget_tweaks %}
 
 {% block title %}Take Exam{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h2>{{ exam.title }}</h2>
-    <div class="card">
-        <form method="post">
-            {% csrf_token %}
-            {% for question in exam.questions.all %}
-                <div class="form-group">
+<div class="container mt-5">
+    <h2 class="mb-4 text-primary">{{ exam.title }}</h2>
+    <form method="post" class="needs-validation" novalidate>
+        {% csrf_token %}
+        
+        {% for question in exam.questions.all %}
+        <div class="card mb-4 shadow-sm">
+            <div class="card-body">
+                <h4 class="card-title">Question {{ forloop.counter }}</h4>
+                <div class="form-group mb-4">
                     <label>{{ question.text }}</label>
                     {% if question.question_type.name == 'Multiple Choice' %}
                         {% for answer in question.answers.all %}
-                            <div>
-                                <input type="radio" name="question_{{ question.id }}" value="{{ answer.id }}">
-                                {{ answer.text }}
-                            </div>
+                        <div class="form-check">
+                            <input type="radio" name="question_{{ question.id }}" value="{{ answer.id }}" class="form-check-input" required>
+                            <label class="form-check-label">{{ answer.text }}</label>
+                        </div>
                         {% endfor %}
                     {% elif question.question_type.name == 'Text' %}
-                        <textarea name="text_answer_{{ question.id }}" rows="3"></textarea>
+                        <textarea name="text_answer_{{ question.id }}" class="form-control" rows="3" required></textarea>
                     {% endif %}
                 </div>
-            {% endfor %}
-            <input type="submit" value="Submit Exam" class="btn">
-        </form>
-    </div>
+            </div>
+        </div>
+        {% endfor %}
+        
+        <button type="submit" class="btn btn-primary btn-lg btn-block mt-4 mb-5">Submit Exam</button>
+    </form>
 </div>
+
+<script>
+(function() {
+  'use strict';
+  window.addEventListener('load', function() {
+    var forms = document.getElementsByClassName('needs-validation');
+    var validation = Array.prototype.filter.call(forms, function(form) {
+      form.addEventListener('submit', function(event) {
+        if (form.checkValidity() === false) {
+          event.preventDefault();
+          event.stopPropagation();
+        }
+        form.classList.add('was-validated');
+      }, false);
+    });
+  }, false);
+})();
+</script>
 {% endblock %}
