--- a/FUExaminationSystem/users/templates/registration/user_profile.html
+++ b/FUExaminationSystem/users/templates/registration/user_profile.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card">
-                <img src="{{ user.profile_picture.url if user.profile_picture else '/static/images/default_profile.png' }}" class="card-img-top rounded-circle" alt="Profile Picture">
+                <img src="{{ user.profile_picture.url if user.profile_picture!="" else 'profile_pics/default_profile.png' }}" class="card-img-top rounded-circle" alt="Profile Picture">
                 <div class="card-body text-center">
                     <h4 class="card-title">{{ user.username }}</h4>
                     <p class="card-text">{{ user.bio }}</p>
