Exam system improved and extra improvements (2)
- Students can now start and complete the exam.
- Students can see their exam results after the exam is over.
- Teachers can now finish the exam and see the number of students taking the exam.
- The exam list is now sorted according to the start and activity status of the exams.
- exam_list, grade_exam, exam_result and take_exam UIs have been updated and made functional.

--- a/FUExaminationSystem/templates/base_generic.html
+++ b/FUExaminationSystem/templates/base_generic.html
@@ -119,6 +119,24 @@
         .form-control:focus, .form-check-input:focus {
             box-shadow: 0 0 0 0.2rem rgba(46, 204, 113, 0.25);
         }
+
+        .custom-green-bg {
+            background-color: #e9f5e9; /* Açık yeşil arka plan rengi */
+        }
+        .custom-green-border {
+            border-color: #a2d5a3; /* Yeşil sınır rengi */
+        }
+        .custom-green-text {
+            color: #3c763d; /* Yeşil metin rengi */
+        }
+        .card {
+            border: 1px solid #a2d5a3; /* Yeşil sınır rengi */
+            border-radius: 0.25rem; /* Köşe yuvarlama */
+        }
+        .card-header {
+            background-color: #a2d5a3; /* Kart başlığı arka plan rengi */
+            color: white; /* Kart başlığı metin rengi */
+        }
     </style>
 </head>
 <body>
