Exam system improved and extra improvements (3)
- Added timer for the exam.
- The exam ends automatically after the timer expires.
- Marked answers are now saved to show the answers if the user refreshes the page or wants to take the quiz again.

- Quiz System is not working completely. There may be missing or excessive submissions when saving the data to the database. This bug will be fixed in the next commit.
- The save system will be changed to save when there is a change. This system will be changed in the next commit.

--- a/FUExaminationSystem/templates/exams/exam_list.html
+++ b/FUExaminationSystem/templates/exams/exam_list.html
@@ -41,6 +41,8 @@
                                     {% elif request.user.is_student %}
                                         {% if exam.id in completed_exams %}
                                             <a href="{% url 'exam_result' exam.pk %}" class="btn btn-success btn-sm">View Result</a>
+                                        {% elif exam.id in active_submissions %}
+                                            <a href="{% url 'take_exam' exam.pk %}" class="btn btn-warning btn-sm">Continue Exam</a>
                                         {% else %}
                                             <a href="{% url 'take_exam' exam.pk %}" class="btn btn-primary btn-sm">Take Exam</a>
                                         {% endif %}
