--- a/FUExaminationSystem/users/templates/registration/login.html
+++ b/FUExaminationSystem/users/templates/registration/login.html
@@ -33,4 +33,19 @@
         </div>
     </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const form = document.querySelector('form');
+        form.addEventListener('submit', function(event) {
+            if (!form.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+                
+                alert('Please fill in both username and password fields.');
+            }
+            form.classList.add('was-validated');
+        }, false);
+    });
+    </script>
 {% endblock %}
