Exam IDE Integration and Future Enhancements (8)
- Added a Python IDE for students to use during exams.
- Fixed an issue where the "Continue Exam" button was not displaying correctly on the home page during an ongoing exam.
- Minor improvements and bug fixes.

Upcoming: The exam creator will be able to define variables or constants within the IDE during exam creation.

Future feature: Students will have the ability to upload their datasets and use them within the IDE.

--- a/FUExaminationSystem/templates/base_generic.html
+++ b/FUExaminationSystem/templates/base_generic.html
@@ -10,6 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     
     <style>
+
+        #ide-icon {
+            position: fixed;
+            top: 50%;
+            right: 0; 
+            transform: translateY(-50%);
+            transition: right 0.3s;
+            z-index: 1000;
+        }
+
         :root {
             --primary-color: #2ecc71;
             --secondary-color: #27ae60;
